force-app/main/default/objects/BadDebt__c/BadDebt__c.object-meta.xml
<CustomObject>
    <label>Bad Debt</label>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>Bad Debt ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bad Debt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>