force-app/main/default/objects/BadDebt__c/fields/BadDebtAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>BadDebtAmountFCY__c</fullName>
    <label>Bad Debt Amount(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>