force-app/main/default/objects/BadDebt__c/fields/BadDebtStatus__c.field-meta.xml
<CustomField>
    <fullName>BadDebtStatus__c</fullName>
    <label>Bad Debt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BadDebtStatus</valueSetName>
    </valueSet>
</CustomField>