force-app/main/default/objects/BadDebt__c/fields/Debtor__c.field-meta.xml
<CustomField>
    <fullName>Debtor__c</fullName>
    <label>Debtor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BAD DEBT</relationshipLabel>
    <relationshipName>BadDebt</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>