force-app/main/default/objects/BadDebt__c/fields/ExpectedUncollectableAccountFCY__c.field-meta.xml
<CustomField>
    <fullName>ExpectedUncollectableAccountFCY__c</fullName>
    <formula>BadDebtAmountFCY__c *  ProbabilityOfNotCollecting__c</formula>
    <label>Expected Uncollectable Account(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>