force-app/main/default/objects/BadDebt__c/fields/FMSBill__c.field-meta.xml
<CustomField>
    <fullName>FMSBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS BILL</label>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipLabel>BAD DEBT</relationshipLabel>
    <relationshipName>BadDebt</relationshipName>
    <type>Lookup</type>
</CustomField>