force-app/main/default/objects/BadDebt__c/fields/FMSSO__c.field-meta.xml
<CustomField>
    <fullName>FMSSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>BAD DEBT</relationshipLabel>
    <relationshipName>BadDebt</relationshipName>
    <type>Lookup</type>
</CustomField>