force-app/main/default/objects/BadDebt__c/fields/ProbabilityOfNotCollecting__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityOfNotCollecting__c</fullName>
    <label>Probability of Not Collecting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>